# WeatherDashboard

./: .bashrc  .gitignore  CMakeLists.txt
Dashboard/qml/: CurrentWeather.qml  Forecast.qml  SearchScreen.qml  main.qml
Dashboard/src/: main.cpp  weatherapi.cpp  weatherapi.h
